<resources>
    <string name="app_name">Al-Quran e Kareem</string>
    <string name="title_activity_navigation_drawer">Al-Quran e Kareem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Main Menu</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_urdu_surah">Surahs-Urdu Translation</string>
    <string name="menu_urdu_parah">Parahs-Urdu Translation</string>
    <string name="menu_english_surah">Surahs-English Translation</string>
    <string name="menu_english_parah">Parahs-English Translation</string>
    <string name="menu_about">About</string>
    <string name="about_quran_desc">Quran is the holy book of Islam. Muslims believes it as
    "The Words of Allah Almighty" and consider it a final testament. </string>
    <string name="about_me">I am Iqra Sarwar. This Quran application is developed by me. You can read Urdu, English translations of quran along with arabic in it.</string>
</resources>