<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.quranappv3.ui.mainMenu.mainMenuFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main_menu" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.quranappv3.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.quranappv3.ui.settings.settingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.quranappv3.ui.About.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_urdu_surah"
        android:name="com.example.quranappv3.ui.surahurdu.surahUrduFragment"
        android:label="@string/menu_urdu_surah"
        tools:layout="@layout/fragment_surah_urdu" />

    <fragment
        android:id="@+id/nav_urdu_parah"
        android:name="com.example.quranappv3.ui.parahUrdu.parahUrduFragment"
        android:label="@string/menu_urdu_parah"
        tools:layout="@layout/fragment_parah_urdu" />

    <fragment
        android:id="@+id/nav_english_parah"
        android:name="com.example.quranappv3.ui.parahEnglish.parahEnglishFragment"
        android:label="@string/menu_english_parah"
        tools:layout="@layout/fragment_parah_english" />

    <fragment
        android:id="@+id/nav_english_surah"
        android:name="com.example.quranappv3.ui.surahEnglish.surahEnglishFragment"
        android:label="@string/menu_english_surah"
        tools:layout="@layout/fragment_surah_english" />
</navigation>